--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,4 +1,14 @@
 {
+  "scoringMeeting": "Scoring meeting",
+  "selfEvaluationMeeting": "Self evaluation meeting",
+  "createSelfEvaluationMeeting": "Create self evaluation meeting",
+  "orientationMeeting": "Orientation meeting",
+  "users": "Users",
+  "serviceProviders": "Service providers",
+  "everybody": "Everybody",
+  "name": "Name",
+  "email": "Email",
+  "roles": "Roles",
   "addOrUpdateParticipants": "Add or update participants",
   "current": "Current",
   "archived": "Archived",
