--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "yourComment": "Your Comment",
-  "addComemnt": "Add comment",
+  "addComment": "Add comment",
   "providers": "Service providers",
   "workingGroup": "Working group",
   "review": "Review",
