--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
+  "addIssue": "Add issue",
+  "yourIssue": "Your issue",
   "yourComment": "Your Comment",
   "addComment": "Add comment",
   "providers": "Service providers",
