--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
+  "createActions": "Create actions",
+  "assignActions": "Assign actions",
   "viewIssues": "View issues",
   "reviewScorecard": "Review scorecard",
   "sendMeetingEmail": "Send meeting email",
