--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "coreIssueStandard": "Standard",
   "actions": "Actions",
   "addAction": "Add action",
   "createActions": "Create actions",
@@ -61,13 +62,6 @@
   "communityScore": "Community Score",
   "chooseTimesYouAreFreeFor": "Choose dates you are free",
   "sendYourDates": "Send your dates",
-  "waitingOnEverybodyToCompleteIntro": "Waiting for all to completed introduction story...",
-  "waitingOnEverybodyToCompleteSurvey": "Waiting for all to completed introduction survey...",
-  "waitingOnEverybodyToCompleteElect": "Waiting for all to completed secretary election...",
-  "howIsYourMoodToday": "How is your mood today?",
-  "helpCreateCs": "Help make your services better",
-  "ourMood": "Our collective mood",
-  "electSecretary": "Elect Secretary",
   "votingResults": "Voting results",
   "addAndRateIssues": "Prioritize the Issues",
   "addAndRateIssuesIntro": "Prioritize the issues by voting them up or down. Watch this space...",
