--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
+  "createYourAvatarAndLogin": "Create your avatar and login",
+  "login": "Login",
   "offline": "Offline",
   "coreIssueStandard": "Standard",
   "actions": "Actions",
