--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "toggleComments": "Toggle comments",
   "chooseAvatarColor": "Choose avatar color",
   "chooseAvatar": "Choose your avatar",
   "login": "Login",
