--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "assignedTo":"Assigned to:",
-  "welcomeToTheCommunityScoreCardApp": "Welcome to the Community Score Card app",
+  "welcomeToTheCommunityScoreCardApp": "Welcome to the Community Score Card App",
   "taskIsAssignedTo": "Task is assigned to",
   "saveAssignment": "Save",
   "vote": "Vote",
