--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
+  "facilitatorName": "Facilitator name",
   "assignedTo":"Assigned to:",
-  "welcomeToTheCommunityScoreCardApp": "Welcome to the Community Scorecard App",
+  "welcomeToTheCommunityScoreCardApp": "Welcome to the Community Priorities App",
   "taskIsAssignedTo": "Task is assigned to",
   "saveAssignment": "Save",
   "vote": "Vote",
@@ -17,7 +18,9 @@
   "createActions": "Create actions",
   "assignActions": "Assign actions",
   "viewIssues": "View issues",
-  "reviewScorecard": "Review scorecard",
+  "reviewScorecard": "Review scores",
+  "reviewUserScorecard": "Users",
+  "reviewProviderScorecard": "Providers",
   "sendMeetingEmail": "Send meeting email",
   "addIssue": "Add issue",
   "yourIssue": "Your issue",
@@ -52,7 +55,7 @@
   "addOrUpdateParticipants": "Add or update participants",
   "current": "Current",
   "archived": "Archived",
-  "csProjectsFor": "Community Scorecard Projects for",
+  "csProjectsFor": "Community Priorities Projects for",
   "createProject": "Create Project",
   "addCoreIssue":"Add new issue",
   "coreIssue":"Core issue",
@@ -63,11 +66,11 @@
   "addNewRound": "Add round",
   "roundStartDate": "Round starts at",
   "projectInformation": "Project information",
-  "newProject": "New Community Scorecard Project",
+  "newProject": "New Community Priorities Project",
   "round": "Round",
   "save": "Create project",
   "organizeMeetingTime": "Organize Meeting Time",
-  "createScorecardMeeting": "Create Scorecard Meeting",
+  "createScorecardMeeting": "Create Priorities Meeting",
   "stakeHolderScoringStage": "Stakeholder Scoring",
   "createActionPlan": "Create Action Plan",
   "monitoring": "Monitoring",
@@ -77,9 +80,9 @@
   "votingResults": "Voting results",
   "addAndRateIssues": "Prioritize the Issues",
   "addAndRateIssuesIntro": "Prioritize the issues by voting them up or down. Watch this space...",
-  "newRound": "Community Scorecard Round 1",
+  "newRound": "Community Priorities Round 1",
   "chooseMeetingTime": "Choose Meeting Time",
-  "createScorecard": "Create Scorecard",
+  "createScorecard": "Create Priorities",
   "scoreIssues": "Score issues",
   "reason": "Reason",
   "createActionPlanInfo": "Create the action plan by debating action items and vote on them....",
