--- a/cs-web-app/locales/en/translation.json
+++ b/cs-web-app/locales/en/translation.json
@@ -42,7 +42,7 @@
   "languages": "Languages",
   "locations": "Locations",
   "keyContacts": "Key contacts",
-  "scoringMeeting": "Scoring meeting",
+  "scoringMeeting": "Priorities meeting",
   "selfEvaluationMeeting": "Self evaluation meeting",
   "createSelfEvaluationMeeting": "Create self evaluation meeting",
   "orientationMeeting": "Orientation meeting",
